Port to Minecraft 1.16.5
Based on the 1.18.2 port (50611fa), which already carried the GeckoLib 3 work; behaviour follows main (a0161bc) wherever 1.16.5 allows it.

- No deepslate: finalizeSpawn always marks a lizard as stone and rolls the uniform variant table; STONE sounds only. The DEEPSLATE tracked data, its NBT key, isDeepslate() and the deepslate texture are kept as unreachable plumbing so saves and client code match the other versions.
- No raw ores / copper: IRON drops IRON_INGOT, GOLD drops GOLD_INGOT, COPPER is removed; tint colours unchanged.
- Java 8: --release 8 and source/target 1.8; classic switch, explicit casts and Arrays.asList replace switch ->, instanceof patterns and List.of. Semantics identical.
- Loom splitEnvironmentSourceSets() needs a bundled server jar (1.18+), so the client source set is declared by hand on the merged jar with the same directory layout.
- GeckoLib 3.0.107 (Modrinth Z8ZwOmeO): same one-method Mojmap patch as for 3.0.80, re-pointed at the singular renderer.geo package; client imports follow it.
- Fabric API 0.42.0+1.16: the mod id is "fabric" (not fabric-api), EntityRendererRegistry.INSTANCE lives in fabric-renderer-registries-v1, and the renderer is built from an EntityRenderDispatcher.
- Mechanical: Tag.TAG_STRING -> literal 8, discard() -> remove(), DefaultRandomPos.getPosAway -> RandomPos.getPosAvoid, LightTexture.FULL_BRIGHT -> LightTexture.pack(15, 15), Log4j logger (no SLF4J on 1.16.5).

Verified: ./gradlew build is clean; a headless dedicated server on JDK 21 loads geckolib3 3.0.107 and orelizards, summons an Ore Lizard from a load function, keeps it for 200 ticks and stops cleanly with no mod stack traces. Client rendering is unverified (no display).

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>